# src/controller/holidays.py
@@ -1,4 +1,4 @@
-from typing import Tuple
+from typing import Tuple, Union, List
 import holidays
 import pandas as pd
 
@@ -7,7 +7,7 @@ from src.controller.internal_helpers import IntList, FloatList, check_length_lis
 from src.misc.date_calculation import construct_datetime_list
 from src.misc.helper_functions import annotation_type_checker
 from src.misc.date_conversion import convert_unix_to_datetime, convert_datetime_to_isoweek, \
-    convert_isoweek_to_datetime, get_months_from_datetime, get_year_from_datetime
+    convert_isoweek_to_datetime, get_months_from_datetime, get_year_from_datetime, convert_datetime_to_unix
 
 COUNTRIES, PROVINCES = get_possible_countries_from_library()
 
@@ -16,15 +16,16 @@ class HolidayController:
 
     @annotation_type_checker
     def get_working_days_per_week(self, date_start: int, date_end: int, country: str, province: str = None,
-                                  compensation_method: str = "month", compensation_interval: Tuple = None):
+                                  compensation_method: str = "month", compensation_interval: Union[List, Tuple] = None):
         assert compensation_method in ["month", "week_interval"], "Compensation method '{}' is not valid!".\
             format(compensation_method)
         if compensation_interval is not None:
-            assert compensation_method is "month"
+            assert len(compensation_interval) == 2, "length of compensation interval must be 2!"
         country_holidays = getattr(holidays, country)
         if province is not None:
-            country_holidays = getattr(country_holidays, province)
-        country_holidays = country_holidays()
+            country_holidays = country_holidays(prov=province, state=province)
+        else:
+            country_holidays = country_holidays()
         date_start = convert_unix_to_datetime(date_start)
         date_end = convert_unix_to_datetime(date_end)
         date_list = construct_datetime_list(date_start, date_end, {"days": 1})
@@ -34,7 +35,7 @@ class HolidayController:
         data = pd.DataFrame({"dates": date_list, "CW": isoweeks, "holiday": holiday})
         number_working_days = data.groupby("CW", as_index=False).sum()
         number_working_days["working_days"] = 5 - number_working_days["holiday"]
-        if compensation_method is "month":
+        if compensation_method == "month":
             dates = convert_isoweek_to_datetime(number_working_days["CW"])
             months = get_months_from_datetime(dates)
             years = get_year_from_datetime(dates)
@@ -47,10 +48,13 @@ class HolidayController:
             monthly_working_days.drop(["sum", "count"], axis=1, inplace=True)
             number_working_days = pd.merge(number_working_days, monthly_working_days, how="left", on="year_month")
             number_working_days.drop(["holiday", "year_month"], axis=1, inplace=True)
+
         else:
             pass
 
-        return number_working_days
+        number_working_days["unix"] = convert_isoweek_to_datetime(number_working_days["CW"])
+        number_working_days["unix"] = convert_datetime_to_unix(number_working_days["unix"])
+        return number_working_days.to_dict("list")
 
     @staticmethod
     def get_holiday_countries():
